Write package documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: functionlist
-Title: What the Package Does (One Line, Title Case)
+Title: Favorite R functions of Sebastian Loos
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Sebastian", "Loos", , "sloos@ethz.ch", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-8830-1734"))
+Description: It contains a dataset.
+License: CC BY 4.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
